	* Fixed a typo in the 'glassgui-receiver' DEB package that caused
	it to be assigned an arch value of 'all'.
2025-04-17 Fred Gleason <fredg@paravelsystems.com>
	* Added code to initialize glassnet.conf(5) to the 'glassnet-mgmnt'
	and 'glassnet-server' DEB packages.
2025-04-17 Fred Gleason <fredg@paravelsystems.com>
	* Change the QSQLDatabase driver from 'QMYSQL3' to 'QMYSQL'.
2025-04-18 Fred Gleason <fredg@paravelsystems.com>
	* Added code to initialize gncd.conf(5) to the 'glassnet-receiver'
	DEB package.
2025-04-18 Fred Gleason <fredg@paravelsystems.com>
	* Fixed bugs that cause package scripts to fail to be included
	correctly in DEB packages.
2025-04-18 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'libqt6sql6-sqlite' dependency to the 'glassnet-receiver'
	DEB package.
	* Fixed a bug in the 'glassnet-receiver' DEB package that prevented
	the database from initializing.
2025-04-18 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in gnmc(1) that threw a SQL error when attempting to
	create a new event.
2025-04-18 Fred Gleason <fredg@paravelsystems.com>
	* Fixed bugs in gnmd(8) that threw 'no such signal' errors.
2025-04-18 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in gnmc(1) that caused garbage to appear in
	feed entries in the 'List Feeds' dialog.
2025-04-18 Fred Gleason <fredg@paravelsystems.com>
	* Fixed 'no such signal' errors in 'src/common/streamcmdserver.cpp'.
2025-04-18 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in gnmc(1) that caused the 'Service Health' indicator
	to display inaccurate state when the local timezone was set to
	non-UTC values.
2025-04-21 Fred Gleason <fredg@paravelsystems.com>
	* Added support for updating gncd(1) via apt(8).
2025-04-21 Fred Gleason <fredg@paravelsystems.com>
	* Modified gnmc(1) to allow multiple receivers to be selected for
	firmware upgrade.
2025-04-21 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.8.1.